--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "yaml-loader": "^0.6.0"
   }
 }
