Add additional skills

--- a/src/data/technologies.yaml
+++ b/src/data/technologies.yaml
@@ -100,6 +100,10 @@ Languages:
     name: Python
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924087/python_xzdlti.svg
     query: '&l=$n'
+  brython:
+    name: Brython
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631990546/brython_s6cmaw.svg
+    background: light
   java:
     name: Java
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924076/java_un8ru7.svg
@@ -195,6 +199,7 @@ Languages:
     name: Jinga 2
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924078/jinga-2_lgvnrn.png
     query: '&l=Jinga%202'
+    background: light
   pug:
     name: Pug
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924086/pug_qsigid.png
@@ -202,6 +207,7 @@ Data:
   mysql:
     name: MySQL
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924083/mysql_al7l8s.svg
+    background: light
   mongodb:
     name: MongoDB
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924083/mongodb_rqlbyw.svg
@@ -226,6 +232,9 @@ Data:
     name: JSON
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924078/json_ibbmdn.png
     query: +$n
+  svg:
+    name: SVG
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631990877/svg_njzxg6.svg
   yaml:
     name: YAML
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924098/yaml_zyyko8.svg
@@ -284,6 +293,7 @@ Platforms:
   pwa:
     name: Progressive Web App
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924087/pwa_hjdeic.png
+    background: light
   docker:
     name: Docker
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924067/docker_vt2rmk.svg
@@ -371,6 +381,12 @@ Equipment:
     name: ESLint
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924067/eslint_c8yelu.png
     query: +$n
+  pylint:
+    name: Pylint
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631989452/pylint_ztts4v.svg
+  prettier:
+    name: Prettier
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631938915/prettier_latphh.png
   gulp:
     name: Gulp
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924073/gulp_x8nu1n.svg
@@ -421,6 +437,21 @@ Equipment:
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924073/gradle_e3rimy.svg
     query: +$n
     background: light
+  nodemon:
+    name: Nodemon
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631938774/nodemon_ity4tz.svg
+  pytest:
+    name: PyTest
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631939502/pytest_tcrhmt.png
+  coverage-py:
+    name: coverage.py
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631991854/coverage-py_tvunu8.png
+  mypy:
+    name: MyPy
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631987888/mypy_ve3zgu.svg
+  poetry:
+    name: Poetry
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631987892/poetry_bujxnx.svg
 Libraries:
   socket-io:
     name: Socket.IO
@@ -480,6 +511,9 @@ Libraries:
   graphql:
     name: GraphQL
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924073/graphql_gl5lhc.svg
+  discord-py:
+    name: discord.py
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631991884/discord-py_rpkdvy.ico
 Tooling:
   git:
     name: git
@@ -487,10 +521,6 @@ Tooling:
   vscode:
     name: VSCode
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924096/vscode_bggdkq.svg
-  ssh:
-    name: SSH
-    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924091/ssh_borz5v.svg
-    background: light
   gimp:
     name: Gimp
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924069/gimp_f1g6f1.svg
@@ -530,3 +560,19 @@ Tooling:
   sublime-text:
     name: Sublime Text
     image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924092/sublime-text_umugyx.svg
+Protocols:
+  web-worker:
+    name: Web Worker
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631937596/web-worker_sgy1cm.png
+    background: light
+  ssh:
+    name: SSH
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631924091/ssh_borz5v.svg
+    background: light
+  websocket:
+    name: WebSocket
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631938289/websocket_dnwt9b.svg
+    background: light
+  rest:
+    name: REST
+    image: https://res.cloudinary.com/rascaltwo/image/upload/v1631938643/rest_e5g282.png
