--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html-to-text": "^8.1.0",
+    "marked": "^4.0.1",
     "next": "11.1.2",
     "nodemailer": "^6.7.0",
     "react": "17.0.2",
@@ -16,6 +18,8 @@
     "react-intersection-observer": "^8.32.1"
   },
   "devDependencies": {
+    "@types/html-to-text": "^8.0.1",
+    "@types/marked": "^4.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
