--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemailer": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.32.1"
+    "react-intersection-observer": "^8.32.1",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/html-to-text": "^8.0.1",
