--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "highlight.js": "^11.4.0",
     "html-to-text": "^8.1.0",
     "marked": "^4.0.1",
     "next": "11.1.2",
