--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NODEMAILER_TRANSPORT='{"host":"smtp.gmail.com","port":587,"secure":false,"auth":{"user":"USERNAME","pass":"PASSWORD"}}'
 NODEMAILER_SENDMAIL='{"from":"FROM","to":"TO","subject":"SUBJECT"}'
+NEXT_PUBLIC_VITALS=true
+VITALS_PATH=vitals/vitals.jsonl
