--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "highlight.js": "^11.4.0",
     "html-to-text": "^8.1.0",
     "marked": "^4.0.1",
-    "next": "11.1.2",
+    "next": "^12.1.0",
     "nodemailer": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
