--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.1",
+    "request-ip": "^2.1.3",
     "rotating-file-stream": "^3.0.3",
     "sharp": "^0.29.3"
   },
