Add additional socials to fullname site

--- a/publicRuntimeConfig.json
+++ b/publicRuntimeConfig.json
@@ -16,6 +16,8 @@
     "email": "joseph97milliken@gmail.com",
     "links": {
       "Email": "mailto:joseph97milliken@gmail.com",
+      "Github": "https://github.com/RascalTwo",
+      "Twitter": "https://twitter.com/RealRascalTwo",
       "LinkedIn": "https://linkedin.com/in/joseph97milliken/"
     },
     "website": "https://josephmilliken.com"
